🚀 Add `style.css` to `.title` to prevent stretch beyond `500px max-width` and `justify content with space-between` `left` & `right` divs to `.wrapper` div

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Merriweather Sans', Arial, Helvetica, sans-serif;
 }
 
+.title {
+  max-width: 500px;
+}
+
 .wrapper .left .title h1 {
   font-size: 70px;
   color: black;
@@ -21,7 +25,7 @@ body {
   padding: 40px;
 
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
